Added support for sending invites

--- a/test/functional/config.php.dist
+++ b/test/functional/config.php.dist
@@ -5,4 +5,5 @@ return [
     'SECRET'    => '<SECRET>',
     'USERNAME'  => '<ONEDRIVE_USERNAME>',
     'PASSWORD'  => '<ONEDRIVE_PASSWORD>',
+    'RECIPIENT' => '<RECIPIENT_EMAIL>',
 ];
